# Study-Robot-Turtlebot

./: Functional Specifications  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/kmj_msg_srv_action_interface/share/kmj_msg_srv_action_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kmj_msg_srv_action_interface/share/kmj_msg_srv_action_interface/action/: Move.action  Move.idl
install/kmj_msg_srv_action_interface/share/kmj_msg_srv_action_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_kmj_msg_srv_action_interface__rosidl_generator_cExport-noconfig.cmake  export_kmj_msg_srv_action_interface__rosidl_generator_cExport.cmake  export_kmj_msg_srv_action_interface__rosidl_generator_pyExport-noconfig.cmake  kmj_msg_srv_action_interfaceConfig-version.cmake  (+8 more)
install/kmj_turtlebot_pkg/lib/kmj_turtlebot_pkg/: detect_obstacle  turtle_move_controller  turtle_server  turtle_service
install/kmj_turtlebot_pkg/share/kmj_turtlebot_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/kmj_msg_srv_action_interface/: CMakeLists.txt
src/kmj_msg_srv_action_interface/action/: Move.action
src/kmj_turtlebot_pkg/: package.xml  setup.cfg  setup.py
src/kmj_turtlebot_pkg/kmj_turtlebot_pkg/: detect_obstacle.py  turtle_move.ui  turtle_move_controller.py  turtle_move_ui.py  turtle_server.py
(+57 files in other folders)
